--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,17 +1,18 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-<web-app>
-  <display-name>TinyURL</display-name>
-  <servlet>
-  	<servlet-name>TinyURL</servlet-name>
-  	<display-name>TinyURL</display-name>
-  	<description></description>
-  	<servlet-class>net.cloud.servlet.TinyURL</servlet-class>
-  </servlet>
-  <servlet-mapping>
-  	<servlet-name>TinyURL</servlet-name>
-  	<url-pattern>/TinyURL/*</url-pattern>
-  </servlet-mapping>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+                             http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	version="3.0" metadata-complete="true">
+	<display-name>TinyURL</display-name>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+	</welcome-file-list>
+	<servlet>
+		<servlet-name>TinyURL</servlet-name>
+		<servlet-class>net.cloud.servlet.TinyURL</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>TinyURL</servlet-name>
+		<url-pattern>/TinyURL/*</url-pattern>
+	</servlet-mapping>
 </web-app>
