--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,9 +10,14 @@
 	<servlet>
 		<servlet-name>TinyURL</servlet-name>
 		<servlet-class>org.javastack.tinyurl.TinyURL</servlet-class>
+		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>TinyURL</servlet-name>
-		<url-pattern>/TinyURL/*</url-pattern>
+		<url-pattern>/tiny</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>TinyURL</servlet-name>
+		<url-pattern>/r/*</url-pattern>
 	</servlet-mapping>
 </web-app>
