--- a/sampleconf/org.javastack.tinyurl.properties
+++ b/sampleconf/org.javastack.tinyurl.properties
@@ -1,5 +1,7 @@
-#storage.dir=${catalina.base}/data/
-whitelist.file=whitelist.conf
+# use placeholder for reference tomcat base directory
+storage.dir=${catalina.base}/storage/
+# find whitelist in classpath
+whitelist.file=file://${catalina.base}/storage/whitelist.conf
 #check.flags=SURBL,CONNECTION
 check.flags=WHITELIST
 connection.timeout.millis=3000
