MySQL backend for persistence

--- a/sampleconf/org.javastack.tinyurl.properties
+++ b/sampleconf/org.javastack.tinyurl.properties
@@ -6,3 +6,10 @@ whitelist.file=file://${catalina.base}/storage/whitelist.conf
 check.flags=WHITELIST
 connection.timeout.millis=3000
 read.timeout.millis=5000
+# Optional MySQL Persistence (default: not enabled)
+#storage.class=org.javastack.tinyurl.jdbc.PersistentMySQL
+#storage.url=jdbc:mysql://localhost:3306/tinyurl
+#storage.username=tinyurl
+#storage.password=secret
+# Create MySQL user With:
+# GRANT ALL ON tinyurl.* TO 'tinyurl'@'%' IDENTIFIED BY 'secret';
