--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,19 @@
 	</dependencies>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<excludes>
+					<exclude>**/log4j*.properties</exclude>
+					<exclude>**/log4j*.xml</exclude>
+					<exclude>**/*.properties</exclude>
+					<exclude>**/*.conf</exclude>
+					<exclude>**/sandbox/*</exclude>
+				</excludes>
+				<filtering>false</filtering>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -115,12 +128,13 @@
 						</manifest>
 						<manifestEntries>
 							<Built-By>maven</Built-By>
+							<Implementation-Vendor>${project.groupId}</Implementation-Vendor>
+							<Implementation-Title>${project.groupId}:${project.artifactId}</Implementation-Title>
+							<Implementation-Version>${project.version}</Implementation-Version>
 						</manifestEntries>
 					</archive>
 					<excludes>
 						<exclude>**/sandbox/*</exclude>
-						<exclude>**/*.properties</exclude>
-						<exclude>**/*.conf</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
