generate QRCode without external service

--- a/sampleconf/org.javastack.tinyurl.properties
+++ b/sampleconf/org.javastack.tinyurl.properties
@@ -13,3 +13,9 @@ read.timeout.millis=5000
 #storage.password=secret
 # Create MySQL user With:
 # GRANT ALL ON tinyurl.* TO 'tinyurl'@'%' IDENTIFIED BY 'secret';
+#
+# QR Codes
+#base.url=https://tiny.javastack.org/r/
+#qr.size.min=50
+#qr.size.max=1000
+#qr.size.default=300
