--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 			<artifactId>packer</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<!-- QRCodes -->  
+		<dependency>
+			<groupId>org.javastack</groupId>
+			<artifactId>qrcode-gen</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 		<!-- Servlets -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
