--- a/sampleconf/org.javastack.tinyurl.properties
+++ b/sampleconf/org.javastack.tinyurl.properties
@@ -8,7 +8,7 @@ connection.timeout.millis=3000
 read.timeout.millis=5000
 # Optional MySQL Persistence (default: not enabled)
 #storage.class=org.javastack.tinyurl.jdbc.PersistentMySQL
-#storage.url=jdbc:mysql://localhost:3306/tinyurl
+#storage.url=jdbc:mysql://localhost:3306/tinyurl?useSSL=false
 #storage.username=tinyurl
 #storage.password=secret
 # Create MySQL user With:
