--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
 			<version>8.0.28</version>
 			<scope>provided</scope>
 		</dependency>
-		<!-- DBCP Pool Included in Tomcat -->
+		<!-- JDBC Pool Included in Tomcat -->
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-jdbc</artifactId>
